Bug 81113 - WebQuery (link to external data) does not work anymore
Summary: WebQuery (link to external data) does not work anymore
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.3.0.2 rc
Hardware: x86 (IA32) Linux (All)
: highest critical
Assignee: David Tardon
URL:
Whiteboard: target:4.4.0 target:4.3.1
Keywords: bibisected, regression
: 82352 82743 (view as bug list)
Depends on:
Blocks: Calc-External-Datalink mab4.3
  Show dependency treegraph
 
Reported: 2014-07-09 14:43 UTC by Kevin Suo
Modified: 2017-08-28 18:07 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Suo 2014-07-09 14:43:07 UTC
The WebQuery function (Insert->Link to external data) does not work anymore.

Steps to reproduce:
1. New Calc;
2. Insert - Link to external data
3. Paste any one of the following links to the url field:
 http://stock.finance.qq.com/corp1/cbsheet.php?zqdm=600585&type=2013
 https://wiki.documentfoundation.org/Language_Teams
 ...(any url which contains a table in it)
4. Hit ENTER.

Current Behaviour:
Nothing happens.

Expected Behaviour:
Calc should load the webpage for a while, then a dialog pops up to ask you for import options, then available tables/ranges appear in the box.

OS: Ubuntu 14.04 x86
LibreOffice 4.3.0.2.

It works in 4.2.5.2, -> Regression.
Comment 1 Kevin Suo 2014-07-09 14:46:25 UTC
WebQuery is a functionality that many people uses to fetch data from the web and import to calc.

Hope this  functionality come back in 4.3 soon.
Comment 2 Kevin Suo 2014-07-09 16:14:14 UTC
More info: WebQuery works as expected using macro in 4.3.0.2:

sub myWebQuery

        dim document   as object
        dim dispatcher as object
         
        document   = ThisComponent.CurrentController.Frame
        dispatcher = createUnoService("com.sun.star.frame.DispatchHelper")

        dim args1(2) as new com.sun.star.beans.PropertyValue
        args1(0).Name = "FileName"
        args1(0).Value = "http://stock.finance.qq.com/corp1/cbsheet.php?zqdm=600585&type=2013"
        args1(1).Name = "FilterName"
        args1(1).Value = "calc_HTML_WebQuery"
        args1(2).Name = "Source"
        args1(2).Value = "HTML_TABLES

        dispatcher.executeDispatch(document, ".uno:InsertExternalDataSource", "", 0,args1())
 
end sub
Comment 3 Yousuf Philips (jay) (retired) 2014-07-12 07:03:09 UTC
Confirmed it doesnt work in 4.3.1 and master, but works in 4.2.6.
Comment 4 Kevin Suo 2014-07-12 11:16:48 UTC
For this link:
http://moneycentral.msn.com/investor/external/excel/quotes.asp?SYMBOL=IAU

as provided in bug 72678, it also does NOT work in LibreOffice 4.2.5.2 (when hit ENTER, no  tables are shown in the "available tables/ranges" box).
But it works in 3.6.7.2.

However, in 4.2.5.2, all other links I tested works fine.

So I keep the version as 4.3.0.2, and add bug 72678 as see also.
Comment 5 Joel Madero 2014-07-16 06:10:04 UTC
Prioritizing:
Critical - completely broken feature (although I think major would have been sufficient, I'll trust others judgment here :) )
Highest - regression + 100% broken (mab)

So I hope that this bibisect is correct - I based it on the import dialog coming up vs. nothing coming up with https://wiki.documentfoundation.org/Language_Teams

That being said - with bibisect even waiting quite awhile I never saw tables come up (strange, no crash or anything, just hung, maybe had I waited longer it would have worked).
 ae44e45a06e1e642fc72b259e50e59837a9dda3f is the first bad commit
commit ae44e45a06e1e642fc72b259e50e59837a9dda3f
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Sat May 10 21:04:53 2014 +0000

    source-hash-004b403d75356e7184c24c6b51f8fef04171d3a1
    
    commit 004b403d75356e7184c24c6b51f8fef04171d3a1
    Author:     Jan Holesovsky <kendy@collabora.com>
    AuthorDate: Fri Dec 13 09:15:11 2013 +0100
    Commit:     Jan Holesovsky <kendy@collabora.com>
    CommitDate: Fri Dec 13 13:01:28 2013 +0100
    
        startcenter: Full thumbnail size (256px), upscale if necessary.
    
        Change-Id: I8ae72249853a03b1dfca0ecd10eef47e9aa7cbfe

:100644 100644 12d300b8bbc9cd20399720e053baf95633f5fb1c ede470279c103eac5ce6a6cf4d4384ba331e7140 M	ccache.log
:100644 100644 8b4af6d8655bc49024d8a358d094dafb84ec96c6 f12f19b2889099a40c30e520466ff48508db3c2e M	commitmsg
:100644 100644 0d296e6436e5e802de8c4f20f1f0831416e3e16f 2e5489b0db88575e308918070102ad674013094a M	make.log
:040000 040000 cfc34e4273fc06efa5eecb27ff9ad21a4e3ecf7e 745d4b4528db21a0a03febba8c159be924265f11 M	opt


# bad: [423a84c4f7068853974887d98442bc2a2d0cc91b] source-hash-c15927f20d4727c3b8de68497b6949e72f9e6e9e
# good: [65fd30f5cb4cdd37995a33420ed8273c0a29bf00] source-hash-d6cde02dbce8c28c6af836e2dc1120f8a6ef9932
git bisect start 'latest' 'oldest'
# good: [e02439a3d6297a1f5334fa558ddec5ef4212c574] source-hash-6b8393474974d2af7a2cb3c47b3d5c081b550bdb
git bisect good e02439a3d6297a1f5334fa558ddec5ef4212c574
# bad: [4850941efe43ae800be5c76e1102ab80ac2c085d] source-hash-980a6e552502f02f12c15bfb1c9f8e6269499f4b
git bisect bad 4850941efe43ae800be5c76e1102ab80ac2c085d
# skip: [a043626b542eb8314218d7439534dce2fc325304] source-hash-9379a922c07df3cdb7d567cc88dfaaa39ead3681
git bisect skip a043626b542eb8314218d7439534dce2fc325304
# skip: [aba65c3e4c0df07e4909aeefb758cdb688242bf6] source-hash-827524abfb4b577d08276fde40929a9adfb7ff1a
git bisect skip aba65c3e4c0df07e4909aeefb758cdb688242bf6
# good: [c81a8a0dcfc1ed095a80e4485c89dd0fcaf73f31] source-hash-c69ed33628ec0b7abf6296539cf280d6c4265930
git bisect good c81a8a0dcfc1ed095a80e4485c89dd0fcaf73f31
# good: [30cde618212ecaf5725321372bd1b8339f8e2b9f] source-hash-137f872aa8e6e598e7c7ed1ffa4d21e580e22bdb
git bisect good 30cde618212ecaf5725321372bd1b8339f8e2b9f
# bad: [306d62ec4b911895f08f2bb8efefebed7ac795f0] source-hash-735bd120c9ee2d9bb3514907936c27efb75d7282
git bisect bad 306d62ec4b911895f08f2bb8efefebed7ac795f0
# good: [835ce851abe657bb5a8238693ea924287e6890c0] source-hash-1e53784811458563b36fd4cbaa15c2f526a7161b
git bisect good 835ce851abe657bb5a8238693ea924287e6890c0
# good: [7d9e0cb59cf7fe20b31a5c291238b5391834c278] source-hash-c828319753558e25a48ce7808604bcc648f2483d
git bisect good 7d9e0cb59cf7fe20b31a5c291238b5391834c278
# bad: [03bcabfd9fda01b23178104f5c1b8e2e0053e6b2] source-hash-007bf2b8c04090920b54e914ac75fc13720b450c
git bisect bad 03bcabfd9fda01b23178104f5c1b8e2e0053e6b2
# bad: [ae44e45a06e1e642fc72b259e50e59837a9dda3f] source-hash-004b403d75356e7184c24c6b51f8fef04171d3a1
git bisect bad ae44e45a06e1e642fc72b259e50e59837a9dda3f
# first bad commit: [ae44e45a06e1e642fc72b259e50e59837a9dda3f] source-hash-004b403d75356e7184c24c6b51f8fef04171d3a1
Comment 6 Maxim Monastirsky 2014-07-16 11:03:11 UTC
@David: Probably a regression from:

commit 735dc598cd38c76aeeaa37df57f1d0018fe294c8
Author: David Tardon <dtardon@redhat.com>
Date:   Mon Dec 9 20:11:43 2013 +0100

    handle Keynote package format too
    
    Change-Id: I3023bcba0a3d3bd83aca56e4ef72a892da5b55cf

Any HTML content is mis-detected as "impress_AppleKeynote".
Comment 7 Commit Notification 2014-07-16 13:34:15 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c10390a681a4d4696d45a6d38f7d01829f368daa

fdo#81113 always run the actual detection



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2014-07-17 10:09:08 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7e68478edc0ad24c11657d12ed4f8289393ce1d2&h=libreoffice-4-3

fdo#81113 always run the actual detection


It will be available in LibreOffice 4.3.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Kevin Suo 2014-07-18 08:40:25 UTC
Verified fixed in
Version: 4.4.0.0.alpha0+
Build ID: 461e46904ffa29820be1ccb64cdb9cb6d4469b6c
TinderBox: Win-x86@39, Branch:master, Time: 2014-07-17_08:23:11
Comment 10 Jean-Baptiste Faure 2014-07-18 09:27:55 UTC
Verified in Version: 4.3.1.0.0+
Build ID: 76a4eee58830b7faf4fa0a89e82df36e352d5b06
build at home under Ubuntu 14.04 x86-64
 
Best regards. JBF
Comment 11 Jorendc 2014-08-03 08:58:41 UTC
*** Bug 82035 has been marked as a duplicate of this bug. ***
Comment 12 Maxim Monastirsky 2014-08-09 19:20:47 UTC
*** Bug 82352 has been marked as a duplicate of this bug. ***
Comment 13 Maxim Monastirsky 2014-08-19 07:14:38 UTC
*** Bug 82743 has been marked as a duplicate of this bug. ***
Comment 14 Robinson Tryon (qubit) 2015-12-17 08:26:01 UTC Comment hidden (obsolete)