fdo#81113 always run the actual detection

The old code only run detection if an UCBContent property was passed.
That means that any time the function got only InputStream, it claimed
that it was a Keynote presentation.

Change-Id: I377828229e7e95384257bde247612d7768307581